--- a/area-react/src/loginPages/login.css
+++ b/area-react/src/loginPages/login.css
@@ -61,14 +61,19 @@
   }
   
   .inputconnexion{
-    width: 607px;
-    height: 73px;
+    width: 100%;
+    height: 10%;
     border-radius: 50px;
     border : 0px;
     font-weight: bold;
-    padding-left: 30px;
-    font-size: 30px;
+    font-size: 20px;
+    padding-left: 20px;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;
   }
+
+ 
   
   .inputconnexionbox{
     height: 100px;
@@ -78,7 +83,7 @@
   }
   
   .Button {
-    width: 552px;
+    width: 100%;
     height: 76px;
     background-color: rgba(86, 128, 233, 1);
     border-radius: 30px;
@@ -88,6 +93,15 @@
     justify-content: center;
     align-items: center;
     display: flex;
+    border : 0px;
+    cursor: pointer;
+    color : white;
+    font-size: 28px;
+  }
+
+  a{
+    color: rgba(86, 128, 233, 1);
+    cursor: pointer;
   }
   
   .ButtonText{
@@ -96,7 +110,7 @@
   }
   
   .line{
-    width: 552px;
+    width: 100%;
     height: 2px;
     background-color: rgba(200, 211, 249, 1);
     border-radius: 30px;
@@ -108,8 +122,16 @@
     display: flex;
   }
   
+  .tab {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30%;
+    height: 90%;
+  }
+  
   .SocialButton{
-    width: 120px;
+    width: 30%;
     height: 80px;
     background-color: white !important;
     border-radius: 5px;
