--- a/area-react/src/WorkflowPages/css/workflowpage.css
+++ b/area-react/src/WorkflowPages/css/workflowpage.css
@@ -16,6 +16,30 @@
     flex-direction: column !important;
 }
 
+.chose-node {
+    width: 30px;
+    height: 30px;
+    align-self: center;
+    border: 0; 
+}
+
+.arg-container {
+    height: auto !;
+    width: auto;
+    background-color: rgba(255,255, 255, 0.7);
+    border-radius: 10px;
+    box-shadow: 1px 5px 10px gray;
+}
+
+.workflow-get{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+}
+
 .vide {
     height: 20%;
 }
@@ -46,8 +70,9 @@
 .workflow-factory{
     height: 300;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     align-self: center;
+
 }
 
 .cross-button{
