--- a/area-expo/Workflow/css/Workflow.module.css
+++ b/area-expo/Workflow/css/Workflow.module.css
@@ -5,3 +5,23 @@
     height: 100%;
 
   }
+
+.plus{
+  width: 100px;
+  height:100px;
+  background-color: rgba(255,255,255, 0.7);
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+}
+
+.chose{
+  flex-direction: row;
+}
+
+.image{
+  width: 60px;
+  height: 60px;
+
+}
